tests/spec/fail/http_https_connect_failed.aja
import (
    "http"
)

print(http.get("https://this-host-should-not-exist.invalid"))
